# ZlNetwork

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
IncludeFiles/: CommunicateProtocol.hpp
IncludeFiles/Network/: ZRP.hpp  ZlNetwork.hpp
IncludeFiles/Network/Buffer/: AdvSockBuffer.hpp  ISockBuffer.hpp  SetBuffer.hpp  UnixSockBuffer.hpp  WinSockBuffer.hpp
IncludeFiles/Network/Handler/: Function.hpp  Listener.hpp  SocketHandler.hpp
IncludeFiles/Network/Resolver/: IAddrInfo.hpp  UnixAddrInfo.hpp  WinAddrInfo.hpp
IncludeFiles/Network/Socket/: AUnixSocket.hpp  AWinSocket.hpp  ISocket.hpp  ITCPSocket.hpp  IUDPSocket.hpp  UnixTCPSocket.hpp  UnixUDPSocket.hpp  WinSockStartup.hpp  WinTCPSocket.hpp  WinUDPSocket.hpp
SourceFiles/: main.cpp  mainS.cpp
SourceFiles/Network/Buffer/: AdvSockBuffer.cpp  UnixSockBuffer.cpp  WinSockBuffer.cpp
SourceFiles/Network/Handler/: Listener.cpp  SocketHandler.cpp
SourceFiles/Network/Resolver/: UnixAddrInfo.cpp  WinAddrInfo.cpp
SourceFiles/Network/Socket/: AUnixSocket.cpp  AWinSocket.cpp  UnixTCPSocket.cpp  UnixUDPSocket.cpp  WinSockStartup.cpp  WinTCPSocket.cpp  WinUDPSocket.cpp
